samples/_failures_safe/1761042671_2a38fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_951041de.c: In function ‘main’:
./samples/SAFE/__tmp_951041de.c:162:5: error: expected declaration or statement at end of input
  162 |     bellman_ford(&graph, source);
      |     ^~~~~~~~~~~~
